src/objects/User.object
<CustomObject>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
                <color>#CC6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
                <color>#990000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_of_Service__c</fullName>
        <formula>datevalue(Now())-PRO_DOH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days of Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Budget_Apr__c</fullName>
        <label>Direct Budget - Apr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Budget_Aug__c</fullName>
        <label>Direct Budget - Aug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Budget_Dec__c</fullName>
        <label>Direct Budget - Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Budget_Feb__c</fullName>
        <label>Direct Budget - Feb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Budget_Jan__c</fullName>
        <label>Direct Budget - Jan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Budget_Jul__c</fullName>
        <label>Direct Budget - Jul</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Budget_Jun__c</fullName>
        <label>Direct Budget - Jun</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Budget_Mar__c</fullName>
        <label>Direct Budget - Mar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Budget_May__c</fullName>
        <label>Direct Budget - May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Budget_Nov__c</fullName>
        <label>Direct Budget - Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Budget_Oct__c</fullName>
        <label>Direct Budget - Oct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Budget_Sep__c</fullName>
        <label>Direct Budget - Sep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Budget_Total__c</fullName>
        <formula>Direct_Budget_Apr__c + Direct_Budget_Aug__c + Direct_Budget_Dec__c  + Direct_Budget_Feb__c + Direct_Budget_Jan__c  + Direct_Budget_Jul__c + Direct_Budget_Jun__c  +Direct_Budget_Mar__c + Direct_Budget_May__c + Direct_Budget_Nov__c  + Direct_Budget_Oct__c  +Direct_Budget_Sep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Budget - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FCL__c</fullName>
        <description>Fulfillment Center Lites</description>
        <label>FCL</label>
        <picklist>
            <picklistValues>
                <fullName>Austin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charlotte/Durham/Raleigh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detroit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Houston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las Vegas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass/Conn/R.Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miami</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Orleans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pittsburgh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rochester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Antonio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Louis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington DC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FC__c</fullName>
        <description>Fulfillment Center</description>
        <label>FC</label>
        <picklist>
            <picklistValues>
                <fullName>Allentown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dallas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orlando</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sauk Village</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HD_Budget_Apr__c</fullName>
        <label>HD Budget - Apr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HD_Budget_Aug__c</fullName>
        <label>HD Budget - Aug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HD_Budget_Dec__c</fullName>
        <label>HD Budget - Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HD_Budget_Feb__c</fullName>
        <label>HD Budget - Feb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HD_Budget_Jan__c</fullName>
        <label>HD Budget - Jan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HD_Budget_Jul__c</fullName>
        <label>HD Budget - Jul</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HD_Budget_Jun__c</fullName>
        <label>HD Budget - Jun</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HD_Budget_Mar__c</fullName>
        <label>HD Budget - Mar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HD_Budget_May__c</fullName>
        <label>HD Budget - May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HD_Budget_Nov__c</fullName>
        <label>HD Budget - Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HD_Budget_Oct__c</fullName>
        <label>HD Budget - Oct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HD_Budget_Sep__c</fullName>
        <label>HD Budget - Sep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HD_Budget_Total__c</fullName>
        <formula>HD_Budget_Apr__c + HD_Budget_Aug__c + HD_Budget_Dec__c + HD_Budget_Feb__c + HD_Budget_Jan__c + HD_Budget_Jul__c + HD_Budget_Jun__c + HD_Budget_Mar__c + HD_Budget_May__c + HD_Budget_Nov__c + HD_Budget_Oct__c + HD_Budget_Sep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HD Budget - Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jan_DOS__c</fullName>
        <description>Days of service as of Jan 1 this year.</description>
        <formula>Date(YEAR(today()), 01, 01)-PRO_DOH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jan DOS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_YOS__c</fullName>
        <description>Years of service as of Jan 1 this year</description>
        <formula>If(Jan_DOS__c&lt;365, 0, 
If(Jan_DOS__c&lt;730, 1, 
If(Jan_DOS__c&lt;1095,2, 
If(Jan_DOS__c&lt;1460,3, 
If(Jan_DOS__c&lt;1825,4,4 
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jan YOS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>101 - Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>106 - Pittsburgh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>109 - St. Louis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - Rochester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>116 - New York City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>129 - Kansas City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>133 - Puerto Rico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>139 - Ohio Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>156 - Cincinnati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>157 - Columbus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 - New Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>164 - Milwaukee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 - Dallas/Ft. Worth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>196 - Palm Springs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 - Long Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 - Bay Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 - Ft. Myers/Naples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>260 - New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>276 - Indianapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29 - Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Miami/Ft. Lauderdale/West Palm Bch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>314 - Toledo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34 - Allentown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 - Las Vegas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39 - Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Daytona/Mel/Orlando</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40 - San Antonio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42 - San Antonio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRO_DOH__c</fullName>
        <description>Date rep was hired as a PRO</description>
        <label>PRO DOH</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pro_Rep_ID__c</fullName>
        <label>Pro Rep ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPSM_New__c</fullName>
        <label>RPSM</label>
        <relationshipName>RPSM_User</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>RPSM__c</fullName>
        <description>Regional Pro Sales Manager</description>
        <label>RPSM Old</label>
        <picklist>
            <picklistValues>
                <fullName>Abe Suleiman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Mahoney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brandon Jones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Emmert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermot McGuire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greg Goodwin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Wysor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luke Markes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mike Marienthal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neal Sherman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phillip Hayes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randy Rivers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spyros Zorbas</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RVP__c</fullName>
        <label>RVP</label>
        <relationshipName>RVP_User</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Revenue_Assumptions__c</fullName>
        <description>As of Jan 01 this year, years of service to determine the revenue assumptions for this year.</description>
        <formula>if( Jan_YOS__c  = 0,525000,
if( Jan_YOS__c =1, 912500,
if( Jan_YOS__c =2, 1100000 ,1225000)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Assumptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVP__c</fullName>
        <label>SVP</label>
        <relationshipName>SVP_User</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Salesforce_password__c</fullName>
        <label>Salesforce password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Apr__c</fullName>
        <formula>Direct_Budget_Apr__c + HD_Budget_Apr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget - Apr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Aug__c</fullName>
        <formula>Direct_Budget_Aug__c + HD_Budget_Aug__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget - Aug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Dec__c</fullName>
        <formula>Direct_Budget_Dec__c + HD_Budget_Dec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget - Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Feb__c</fullName>
        <formula>Direct_Budget_Feb__c + HD_Budget_Feb__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget - Feb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Jan__c</fullName>
        <formula>Direct_Budget_Jan__c + HD_Budget_Jan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget - Jan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Jul__c</fullName>
        <formula>Direct_Budget_Jul__c + HD_Budget_Jul__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget - Jul</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Jun__c</fullName>
        <formula>Direct_Budget_Jun__c + HD_Budget_Jun__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget - Jun</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Mar__c</fullName>
        <formula>Direct_Budget_Mar__c + HD_Budget_Mar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget - Mar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget_May__c</fullName>
        <formula>Direct_Budget_May__c + HD_Budget_May__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget - May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Nov__c</fullName>
        <formula>Direct_Budget_Nov__c + HD_Budget_Nov__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget - Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Oct__c</fullName>
        <formula>Direct_Budget_Oct__c + HD_Budget_Oct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget - Oct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Sep__c</fullName>
        <formula>Direct_Budget_Sep__c + HD_Budget_Sep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget - Sep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget_TM__c</fullName>
        <formula>Total_Budget_Aug__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget TM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget_TYTD__c</fullName>
        <formula>Total_Budget_Jan__c +  Total_Budget_Feb__c + Total_Budget_Mar__c + Total_Budget_Apr__c +  Total_Budget_May__c + Total_Budget_Jun__c +  Total_Budget_Jul__c +  Total_Budget_Aug__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget TYTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Pro_Sales__c</fullName>
        <label>VP Pro Sales</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_of_service__c</fullName>
        <formula>If( Days_of_Service__c  &lt;365, 0, 
If(Days_of_Service__c  &lt;730, 1,
If(Days_of_Service__c  &lt;1095,2,
If(Days_of_Service__c  &lt;1460,3,
If(Days_of_Service__c &lt;1825,4,
If(Days_of_Service__c  &lt;2190,5,
If(Days_of_Service__c  &lt;2555,6,
If(Days_of_Service__c &lt;2920,7,
If(Days_of_Service__c &lt;3285,8,
If(Days_of_Service__c  &lt;3650,9,
If(Days_of_Service__c &lt;4015,10,11)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years of service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers_2</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>VP_Pro_Sales__c</columns>
        <columns>Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Standard User Level 2</value>
        </filters>
        <label>Active Users_with manager</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ActiveUsers_phone</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>MOBILE_USER</columns>
        <columns>CORE.USERS.CELL</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users_with phone</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllInactiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Appirio</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>Appirio</value>
        </filters>
        <label>Appirio</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Last_hired</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>PRO_DOH__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Standard</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Rep</value>
        </filters>
        <label>Last hired</label>
        <language>en_US</language>
        <sharedTo>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NAM_Team</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>NAM</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>NAM Team</label>
        <language>en_US</language>
        <sharedTo>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Read_Only</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <label>Read Only</label>
        <sharedTo>
            <role>IT_DEV</role>
            <role>ProMarketingUser</role>
            <role>ProMktgAdministrator</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Standard_Level_2</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Standard User Level 2</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Standard Level 2</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>IT_DEV</roleAndSubordinates>
            <roleAndSubordinates>ProMktgAdministrator</roleAndSubordinates>
            <roleAndSubordinates>SystemAdministrator</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>active_non_chatter_pro</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>RPSM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Chatter</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>standard</value>
        </filters>
        <label>active non chatter Pro only</label>
        <language>en_US</language>
    </listViews>
</CustomObject>